truck now positioned at first stop in leg. Added z-index so visible

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,6 +64,7 @@ code {
 .truck {
 	position: absolute;
 	bottom: 0;
+	z-index: 2;
 }
 
 .stop-marker:before {
